k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playscapes-nginx
  namespace: playscapes
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: playscapes-main
